--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ tokio-postgres = "0.7.5"
 deadpool-postgres = {version = "0.10.2", features = ['serde']}
 env_logger = "0.9.0"
 log = "0.4.0"
+slog = "2.7.0"
+slog-term = "2.7.0"
+slog-async = "2.7.0"
