--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,8 +14,27 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      postrgres:
+        image: postgres:11-alpine
+        environment:
+          POSTGRES_PASSWORD: actix
+          POSTGRES_USER: actix
+          POSTGRES_DB: actix
+        ports:
+          - 5432:5432 
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v3
+    - name: Install diesel
+      run:  cargo install diesel_cli --no-default-features --features postgres
+    - name: Run migrations 
+      run: diesel migration run 
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+    - name: Copy .env file
+      run: cp .env.github
     - name: Build
       run: cargo build --verbose
     - name: Run tests
