--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,15 @@ serde = { version = "1.0.136", features = ["derive"] }
 dotenv = "0.15.0"
 config = "0.13.0"
 tokio-pg-mapper = "0.2.0"
-tokio-pg-mapper-derive= "0.2.0"
+tokio-pg-mapper-derive = "0.2.0"
 tokio-postgres = "0.7.5"
-deadpool-postgres = {version = "0.10.2", features = ['serde']}
+deadpool-postgres = { version = "0.10.2", features = ['serde'] }
 env_logger = "0.9.0"
 log = "0.4.0"
 slog = "2.7.0"
 slog-term = "2.7.0"
 slog-async = "2.7.0"
+
+[dev-dependencies]
+lazy_static = "1.4.0"
+serde_json = "1.0"
