--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,15 +16,15 @@ jobs:
     container: 
       image: flict/todo-api-cache
     services:
-      postrgres:
-        image: postgres:11-alpine
+      postgres:
+        image: postgres:10.12-alpine
         env:
-          POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
           POSTGRES_DB: postgres
         ports:
-          - 5432:5432 
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 10s --health-retries 8
 
     steps:
     - uses: actions/checkout@v3
