feat(diesel-orm) Update orm and structure

--- a/.env
+++ b/.env
@@ -1,9 +1,4 @@
 SERVER.HOST=127.0.0.1
 SERVER.PORT=7878
-PG.HOST=127.0.0.1
-PG.PORT=5432
-PG.USER=actix
-PG.PASSWORD=actix
-PG.DBNAME=actix
-PG.POOL.MAX_SIZE=30
+DATABASE_URL=postgres://actix:actix@localhost:5432/actix
 RUST_LOG=debug
