--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SERVER.HOST=127.0.0.1
 SERVER.PORT=7878
 DATABASE_URL=postgres://actix:actix@localhost:5432/actix
 RUST_LOG=debug
+SECRET_KEY=this-is-so-secret
