--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ slog-term = "2.7.0"
 slog-async = "2.7.0"
 jsonwebtoken = "8.1.0"
 sha2 = { version = "0.10", default-features = false }
+chrono = "0.4.19"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
