fix(develop): add secret key to config

--- a/config/.env.github
+++ b/config/.env.github
@@ -1,3 +1,5 @@
 SERVER.HOST=0.0.0.0
 SERVER.PORT=8080
 DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
+RUST_LOG=debug
+SECRET_KEY=this-is-so-secret
